# freebsd-containers

./: .gitignore  .golangci.yaml  .pre-commit-config.yaml  container.py  go.mod  go.py  go.sum  matrix.py  projects.yaml  pyproject.toml  ruff.toml
.github/workflows/: containers.yaml  dispatch.yaml  packages.yaml  project.yaml
akr/: freebsd.patch
builder/: config.py  container.py  matrix.py  package.py  utils.py  wheel_tags.py
groundcontrol/: freebsd.patch
jdownloader/root/: entrypoint.sh
ryaml/: ryaml.patch
samba-ldap/root/templates/: generate.sh
